<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crypto_logo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_vertical"
            android:text="@string/crypto_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        app:flow_verticalBias=".20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/linear1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117">

        <TextView
            android:id="@+id/tvCryptoPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin_horizontal"
            android:layout_marginVertical="@dimen/card_margin_vertical"
            android:text="@string/crypto_price" />

        <TextView
            android:id="@+id/tv24hs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin_horizontal"
            android:layout_marginVertical="@dimen/card_margin_vertical"
            android:text="@string/_24_hs_variation" />

        <TextView
            android:id="@+id/tvMarketCap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin_horizontal"
            android:layout_marginVertical="@dimen/card_margin_vertical"
            android:text="@string/market_cap" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>